--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                 </select>
                 <input type="text" value="http://47.95.15.38:8000/tree" class="input_1" id='input_1'>
                 <button type="submit" onclick="sendRequest()">发送请求</button>
+                <button type="submit" onclick="saveInterface()">保存</button>
                 <input type="checkbox" onclick="showParams()" id="showParams" checked>请求参数
                 <input type="checkbox" onclick="showSendHeader()" id="showSendHeader" checked>请求Header
             </div>
